--- a/MemoryGame_NoweOstateczne.csproj
+++ b/MemoryGame_NoweOstateczne.csproj
@@ -51,10 +51,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="OknoGry.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OknoGry.Designer.cs">
+      <DependentUpon>OknoGry.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OknoGry.resx">
+      <DependentUpon>OknoGry.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
